--- a/src/style/style.css
+++ b/src/style/style.css
@@ -31,7 +31,6 @@ body,
 
 header,
 footer {
-  background-color: var(--dark-gray);
   height: 30px;
   width: 100%;
   padding: 20px var(--screen-margin) 20px var(--screen-margin);
@@ -41,8 +40,13 @@ footer {
 }
 
 header {
+  background-color: var(--dark-gray);
   justify-content: space-between;
   gap: 20px;
+}
+
+footer {
+  background-color: #141414;
 }
 
 /* Main component */
@@ -72,6 +76,25 @@ main {
   margin-right: var(--screen-margin);
 }
 
+button {
+  font-size: 1rem;
+  font-family: "Lato", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: white;
+  background-color: green;
+  padding: 10px 20px 10px 20px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: lightgreen;
+}
+
+button:active {
+  background-color: green;
+}
+
 /* Introduction component */
 
 #Introduction {
@@ -83,6 +106,12 @@ main {
 /* PresentationSlides component */
 
 #PresentationSlides {
+  flex-direction: column;
+  /* gap: unset; */
+  justify-content: space-between;
+}
+
+.before-after-slides {
   flex-direction: row;
   /* gap: unset; */
   justify-content: space-between;
@@ -91,6 +120,14 @@ main {
 .slide-image {
   height: 300px;
   width: auto;
+}
+
+/* ContactMe component */
+
+#ContactMe {
+  background-color: var(--dark-gray);
+  padding: 50px var(--screen-margin) 50px var(--screen-margin);
+  height: 500px;
 }
 
 /* Media Queries */
@@ -106,7 +143,7 @@ main {
     --screen-margin: 50px;
   }
 
-  #PresentationSlides {
+  .before-after-slides {
     flex-direction: column;
     gap: var(--default-gap);
   }
