Make an illustration grid, change title sizes

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -124,6 +124,12 @@ button:active {
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.39);
 }
 
+.illustration-image {
+  height: 500px;
+  width: auto;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.39);
+}
+
 /* ContactMe component */
 
 #ContactMe {
