--- a/src/style/style.css
+++ b/src/style/style.css
@@ -56,7 +56,9 @@ main {
   /* min-height: 100%; */
   display: flex;
   flex-direction: column;
+  /* align-items: center; */
   gap: var(--default-gap);
+  /* max-width: 1200px; */
 }
 
 .flex-center {
@@ -69,6 +71,11 @@ main {
 
 .main-with-margin {
   margin: 50px var(--screen-margin) 50px var(--screen-margin);
+  max-width: 1200px;
+  
+  display: flex;
+  flex-direction: column;
+  align-self: center;
 }
 
 .default-margin {
