Make WavesVideo component a part of ContactMe, change divider into a wiggly line

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -133,6 +133,10 @@ button:active {
   position: relative;
 }
 
+#ContactMe {
+  overflow: hidden;
+}
+
 #waves-video {
   position: absolute;
   right: 0;
