--- a/src/style/style.css
+++ b/src/style/style.css
@@ -104,7 +104,7 @@ button {
   font-family: "Lato", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: white;
   background-color: var(--color-theme-dark);
-  padding: 10px 20px 10px 20px;
+  padding: 15px 25px 15px 25px;
   border: none;
   border-radius: 10px;
   cursor: pointer;
@@ -117,6 +117,17 @@ button:hover {
 
 button:active {
   background-color: var(--color-theme-dark);
+}
+
+/* Divider component */
+
+.divider {
+  width: 100%;
+  height: 130px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  overflow: clip;
+  position: relative;
 }
 
 /* Introduction component */
@@ -149,7 +160,8 @@ button:active {
   position: absolute;
   right: 0;
   bottom: 0;
-  max-width: 100%;
+  min-width: 100%;
+  /* min-height: 100%; */
 }
 
 /* PresentationSlides component */
@@ -161,21 +173,58 @@ button:active {
 }
 
 .before-after-slides {
+  display: flex;
   flex-direction: row;
   /* gap: unset; */
   justify-content: space-between;
+  gap: 50px;
+}
+
+.slide-title {
+  padding: 10px 25px 10px 0px;
+  /* background-color: rgb(65, 150, 150);
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px; */
+  border-bottom: rgba(17, 26, 2) 3px solid;
+  margin-bottom: 10px;
+  /* font-weight: bold; */
 }
 
 .slide-image {
   height: 300px;
   width: auto;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.39);
+  /* box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.39); */
+}
+
+.image-outline {
+  border: rgb(29, 221, 255) 2px dashed;
+  height: 320px;
+  width: calc(572.883 / 324 * 320px) px;
 }
 
 .illustration-image {
   height: 500px;
   width: auto;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.39);
+}
+
+/* Image Grid component */
+
+.grid-title {
+  background-color: rgb(17, 26, 22);
+  padding: 15px 25px 15px 25px;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  min-width: 250px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.grid-image {
+  width: 200px;
+  height: auto;
+  cursor: pointer;
+  object-fit: cover;
 }
 
 /* ContactMe component */
@@ -185,8 +234,8 @@ button:active {
   color: white;
   font-weight: bold;
   cursor: pointer;
-  padding: 10px 20px 10px 20px;
-  background-color: var(--color-theme);
+  padding: 15px 25px 15px 25px;
+  background-color: var(--color-theme-dark);
   border: none;
   border-radius: 10px;
 }
@@ -216,6 +265,12 @@ button:active {
   :root {
     --screen-margin: 30px;
   }
+
+  .divider {
+    height: 100px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
 }
 
 @media (max-width: 540px) {
@@ -227,6 +282,16 @@ button:active {
 @media (max-width: 520px) {
   :root {
     --screen-margin: 20px;
+  }
+
+  .grid-image {
+    width: 150px;
+  }
+}
+
+@media (max-width: 400px) {
+  .grid-image {
+    width: 100px;
   }
 }
 
