Add spacing on top of the sections for the header

--- a/src/style/animations.css
+++ b/src/style/animations.css
@@ -1,6 +1,7 @@
 .grid-image:hover,
 .grid-image-webdesign:hover,
-a:hover {
+a:hover,
+button:hover {
   animation-name: enlarge;
   animation-duration: 300ms;
   animation-iteration-count: 1;
