--- a/src/style/style.css
+++ b/src/style/style.css
@@ -59,6 +59,7 @@ button:active {
 
 header,
 footer {
+  height: 100px;
   width: 100%;
   padding: 20px var(--screen-margin) 20px var(--screen-margin);
   display: flex;
@@ -68,8 +69,8 @@ footer {
 }
 
 header {
-  background-color: rgba(0, 0, 0, 0.301);
-  justify-content: space-between;
+  background-color: rgba(0, 0, 0, 0.547);
+  justify-content: center;
   gap: 20px;
   position: fixed;
   z-index: 2;
@@ -87,12 +88,22 @@ footer {
 
 /* Header elements */
 
+.header-elements {
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  justify-content: space-between;
+  gap: 20px;
+}
+
 .header-button {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: transparent;
-  width: 140px;
+  /* width: 140px; */
 }
 
 /* Main component */
@@ -160,8 +171,8 @@ button:active {
 .divider {
   width: 100%;
   height: 200px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  /* margin-top: 20px;
+  margin-bottom: 20px; */
   overflow: clip;
   position: relative;
 }
