--- a/src/style/style.css
+++ b/src/style/style.css
@@ -113,15 +113,36 @@ footer {
   border-radius: 10px;
   background-color: black;
   position: relative;
+
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+}
+
+.hamburger-line {
+  height: 4px;
+  border-radius: 5px;
+  background-color: white;
+  width: 30px;
 }
 
 #hamburger-items {
   display: none;
   position: absolute;
   top: 75px;
-  background-color: blue;
-  width: 200px;
-  height: 300px;
+  /* background-color: blue;   */
+  flex-direction: column;
+}
+
+.hamburger-item {
+  padding: 10px 5px 10px 5px;
+  background-color: black;
+  border-radius: 0;
+}
+
+.hamburger-item:hover {
+  background-color: gray;
 }
 
 /* Main component */
