--- a/src/style/animations.css
+++ b/src/style/animations.css
@@ -1,3 +1,4 @@
+/* Enlarge when moused over */
 .grid-image:hover,
 .grid-image-webdesign:hover,
 a:hover,
@@ -10,10 +11,37 @@ button:hover {
 }
 
 @keyframes enlarge {
-  from {
+  0% {
+    scale: 1;
+  }
+  20% {
     scale: 0.89;
   }
-  to {
+  100% {
     scale: 1.2;
+  }
+}
+
+/* Back to normal when mouse is away */
+.grid-image,
+.grid-image-webdesign,
+a,
+button {
+  animation-name: backToNormal;
+  animation-duration: 300ms;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes backToNormal {
+  0% {
+    scale: 1.2;
+  }
+  20% {
+    scale: 1.3;
+  }
+  100% {
+    scale: 1;
   }
 }
