--- a/src/style/style.css
+++ b/src/style/style.css
@@ -78,6 +78,8 @@ header {
   justify-content: center;
   position: fixed;
   z-index: 2;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 footer {
