--- a/src/style/style.css
+++ b/src/style/style.css
@@ -319,16 +319,23 @@ button:active {
 
 /* Software Block component */
 
+.software-blocks {
+  display: flex;
+  gap: 50px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .rounded-square {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 13px;
-  height: 100px;
-  width: 140px;
+  gap: 40px;
+  /* height: 100px;
+  width: 140px; */
   padding: 20px;
-  background-color: #212028;
+  /* background-color: #212028; */
   border-radius: 10px;
   border: none;
   box-sizing: border-box;
@@ -336,8 +343,8 @@ button:active {
 }
 
 .rounded-square-icon-container {
-  height: 32px;
-  width: 32px;
+  height: 80px;
+  width: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
