--- a/src/style/style.css
+++ b/src/style/style.css
@@ -90,8 +90,8 @@ footer {
 }
 
 .emphasize-text {
-  color: var(--color-theme);
-  /* font-weight: bold; */
+  color: rgb(173, 95, 130);
+  font-weight: bold;
   font-style: normal;
 }
 
@@ -116,7 +116,7 @@ footer {
   border-radius: 0px;
 }
 
-#hamburger-menu {
+#hamburger-menu-button {
   display: none;
   height: 50px;
   width: 50px;
@@ -267,6 +267,52 @@ button:active {
   /* padding-top: 250px; */
   height: 600px;
   margin-top: 60px;
+}
+
+.container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.circle {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #ff6347;
+}
+
+.jiggle-flat {
+  animation: wave-flat 0.5s cubic-bezier(0, 1.02, 0.36, 1);
+}
+
+@keyframes wave-flat {
+  0% {
+    transform: scale(1, 1);
+  }
+  5% {
+    transform: scale(1.5, 0.8);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+
+.jiggle-tall {
+  animation: wave-tall 0.5s cubic-bezier(0, 1.02, 0.36, 1);
+}
+
+@keyframes wave-tall {
+  0% {
+    transform: scale(1, 1);
+  }
+  5% {
+    transform: scale(0.8, 1.5);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
 }
 
 #waves-video {
@@ -436,7 +482,7 @@ button:active {
     justify-content: right;
   }
 
-  #hamburger-menu {
+  #hamburger-menu-button {
     display: flex;
   }
 }
