Change words in Introduction

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -262,6 +262,10 @@ button:active {
   /* padding-bottom: 200px; */
 }
 
+.introduction-text {
+  line-height: 2;
+}
+
 #ContactMe {
   /* overflow: clip; */
   /* padding-top: 250px; */
